<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sails.footballsimulator.activities.MainMenuActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <Button
            style="@style/buttonMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_match" />


        <Button
            style="@style/buttonMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/table" />


        <Button
            style="@style/buttonMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/results" />


        <Button
            style="@style/buttonMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Чатик))" />

        <Button
            style="@style/buttonMainMenu"
            android:id="@+id/buttonOpenManagersPage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_page" />

        <Button
            style="@style/buttonMainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit" />


    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3" />
</LinearLayout>
