<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/textViewNewManagerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manager" />

        <TextView
            android:id="@+id/tvCurrentManagerName"
            style="@style/textViewNewManagerValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        style="@style/recycleViewPlayerTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp">

        <TextView
            style="@style/textViewSquard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/squard" />

        <TextView
            style="@style/textViewSquard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/total" />
    </LinearLayout>

</LinearLayout>