<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    style="@style/mainThemeBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sails.footballsimulator.activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:src="@drawable/img_manager_main" />

        <TextView
            style="@style/textViewBogBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greeting_main" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editTextName"
                style="@style/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:hint="@string/name" />

            <ImageView
                android:id="@+id/imageViewButtonOpenManagersList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextName"
                android:layout_alignRight="@+id/editTextName"
                android:layout_alignTop="@+id/editTextName"
                android:padding="5dp"
                android:src="@drawable/selector_button_open_mng_list"
                android:clickable="true"/>
        </RelativeLayout>


        <Button
            android:id="@+id/angry_btn"
            style="@style/buttonGreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/continue_button" />

    </LinearLayout>

</LinearLayout>
