<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/recycleViewItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewManagerPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="5dp"
            android:layout_weight="2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageViewManagerCountryFlag"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"/>

                <TextView
                    android:id="@+id/tvManagerName"
                    style="@style/textViewManagersName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textViewBlackBoldMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nationality" />

                <TextView
                    android:id="@+id/tvManagerNationality"
                    style="@style/textViewManagersValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textViewBlackBoldMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/tvManagerAge"
                    style="@style/textViewManagersValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textViewBlackBoldMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year" />

                <TextView
                    android:id="@+id/tvManagerYear"
                    style="@style/textViewManagersValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/textViewBlackBoldMiddle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/training" />

                <TextView
                    android:id="@+id/tvManagerTeam"
                    style="@style/textViewManagersValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>